# VisionBasedNavigationAssignments_2015

devel/: .catkin  .rosinstall  setup.sh
devel/include/beginner_tutorials/: AddTwoIntsRequest.h  AddTwoIntsResponse.h  Num.h
devel/lib/beginner_tutorials/: listener  talker
devel/lib/exercise1/: point_cloud_world_cordinates  rgb_to_cloud  undistort_image
devel/lib/exercise2/: point_cloud_world_cordinates  rgb_to_cloud  undistort_image
devel/lib/learning_tf/: frame_tf_broadcaster  turtle_tf_broadcaster  turtle_tf_listener
devel/lib/pkgconfig/: beginner_tutorials.pc  exercise1.pc  exercise2.pc  exercise3.pc  learning_tf.pc  sheet2_dvo.pc  using_markers.pc
devel/lib/using_markers/: basic_shapes  points_and_lines
devel/share/beginner_tutorials/cmake/: beginner_tutorials-msg-paths.cmake  beginner_tutorialsConfig.cmake
devel/share/exercise1/cmake/: exercise1Config.cmake
devel/share/exercise2/cmake/: exercise2Config.cmake
devel/share/exercise3/cmake/: exercise3Config.cmake
devel/share/learning_tf/cmake/: learning_tfConfig.cmake
devel/share/sheet2_dvo/cmake/: sheet2_dvoConfig.cmake
devel/share/using_markers/cmake/: using_markersConfig.cmake
src/: CMakeLists.txt
src/beginner_tutorials/: CMakeLists.txt  package.xml
src/beginner_tutorials/launch/: turtlemimic.launch
src/beginner_tutorials/src/: listener.cpp  talker.cpp
src/exercise1/: CMakeLists.txt  package.xml
src/exercise1/src/: point_cloud_world_cordinates.cpp
src/exercise2/: CMakeLists.txt  package.xml
src/exercise2/include/sheet3_dvo/: dvo.h
src/exercise2/launch/: sheet2_dvo_node.launch
src/exercise2/src/: .rgb_to_point_cloud.cpp.swp  dvo.cpp  dvo_node.cpp
src/exercise2_/: CMakeLists.txt  package.xml
src/exercise2_/include/sheet3_dvo/: dvo.h
src/exercise2_/src/: dvo.cpp
src/exercise3/: CMakeLists.txt  package.xml
src/learning_tf/: 1  CMakeLists.txt
src/learning_tf/launch/: start_demo.launch
src/learning_tf/src/: frame_tf_broadcaster.cpp  turtle_tf_listener.cpp
src/sheet3_simulator/ex3_solution/: CMakeLists.txt  package.xml
src/sheet3_simulator/ex3_solution/include/: se3ukf.hpp  uav_controller.hpp
src/sheet3_simulator/ex3_solution/launch/: ex3.launch
src/sheet3_simulator/ex3_solution/src/: solution.cpp
src/sheet3_simulator/server/euroc_challenge3_simulator/: .gitignore  README.md
src/sheet3_simulator/server/euroc_challenge3_simulator/euroc_simulation_server/: CMakeLists.txt  package.xml
src/sheet3_simulator/server/euroc_challenge3_simulator/euroc_simulation_server/launch/: ex3_setting1.launch  ex3_setting2.launch  ex3_setting3.launch  t1_1.launch.back  t1_2.launch.back  t1_3.launch.back  t2_1.launch.back  t2_2.launch.back  t2_3.launch.back  t4_1.launch.back  t4_2.launch.back  t4_3.launch.back
src/sheet3_simulator/server/euroc_challenge3_simulator/mav_control/: CMakeLists.txt  package.xml
src/sheet3_simulator/server/euroc_challenge3_simulator/mav_description/: CMakeLists.txt  package.xml
src/sheet3_simulator/server/euroc_challenge3_simulator/mav_gazebo/: CMakeLists.txt  package.xml
src/sheet3_simulator/server/euroc_challenge3_simulator/mav_gazebo_plugins/: CMakeLists.txt  package.xml
src/sheet3_simulator/server/euroc_challenge3_simulator/mav_joy_interface/: CMakeLists.txt  package.xml
src/sheet3_simulator/server/euroc_challenge3_simulator/mav_model/: CMakeLists.txt  package.xml
src/sheet3_simulator/server/euroc_comm/: CMakeLists.txt  README.md  package.xml
src/sheet3_simulator/server/euroc_comm/msg/: VisualInertial.msg  VisualInertialWithPose.msg
src/sheet3_simulator/server/euroc_comm/srv/: Task1.srv  Task2.srv
src/using_markers/: CMakeLists.txt  package.xml
src/using_markers/src/: basic_shapes.cpp  points_and_lines.cpp
(+68 files in other folders)
