<?xml version="1.0"?>
<package>
  <name>ex3_solution</name>
  <version>0.0.1</version>
  <description>The euroc_solution_t3 package</description>
  
  <maintainer email="support-challenge03@robotics-challenges.eu">EuRoC Challenge 3 Team</maintainer>

  <license>other</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>geometry_msgs</build_depend>
  <build_depend>mav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>sophus</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>sophus</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>mav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>sophus</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>sophus</run_depend>
</package>
