<package>
  <name>euroc_comm</name>
  <version>1.0.0</version>
  <description>Message and service definitions for EuRoC challenge 3.</description>

  <maintainer email="markus.achtelik_devel@mavt.ethz.ch">Markus Achtelik</maintainer>

  <author>Markus Achtelik</author>
  <author>Fadri Furrer</author>
  <author>Michael Burri</author>
  <author>Pascal Gohl</author>
  <author>Sammy Omari</author>

  <license>ASL 2.0</license>

  <url type="website">https://github.com/ethz-asl/euroc_comm</url>
  <url type="bugtracker">https://github.com/ethz-asl/euroc_comm/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <!-- Dependencies needed to compile this package. -->
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>octomap_msgs</build_depend>
  
  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>octomap_msgs</run_depend>
</package>
